# Twitch

./: CMakeLists.txt  README.md
include/Twitch/: Connection.hpp  Messaging.hpp  TimeKeeper.hpp
src/: Message.cpp  Message.hpp  Messaging.cpp
test/: CMakeLists.txt
test/src/: MessagingTests.cpp
